--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,14 @@
 
             #flashed-messages {margin-top: 20px;}
 
+            .btn-primary {background-color: #565ed7;}
+
+            .btn-success {background-color: #278253;}
+
+            .btn-danger {background-color: #ce1c1c;}
+
+            .btn-warning {background-color: #AD6500;}
+
             {% block style %}{% endblock %}
 
         </style>
